--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+*.DS_Store
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
@@ -54,3 +55,4 @@ bower.json
 
 # Ignore pow environment settings
 .powenv
+.DS_Store
